Logo e fundo da primeira pagina salvos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>FLAMENGO</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<img src="assets/grunge-escuro-em-fundo-vermelho_1409-1772.avif" alt="">
 <body>
     
 </body>
