--- a/segunda-pagina.html
+++ b/segunda-pagina.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <title>FLAMENGO</title>
 </head>
 <body>
-    
+
+    <header class="header">
+        <img src="assets/Gemini_Generated_Image_ba1pv2ba1pv2ba1p.png" class="logo" alt="Logo Flamengo">
+        <p class="descricao">
+           Quais são os títulos do Flamengo?
+Títulos do Clube de Regatas do Flamengo no futebol ...
+No Brasil, o Flamengo é, oficialmente, detentor de oito títulos do Campeonato Brasileiro (1980, 1982, 1983, 1992, 2009, 2019, 2020 e 2025) — tendo conquistado também à Copa União, de 1987 —, cinco títulos da Copa do Brasil, três Supercopa Rei e uma Copa dos Campeões.
+<br>
+<br>
+Quais são os trofeus do Flamengo?
+O Flamengo ganhou 6 troféus oficiais em 2025: 🏆✅️ Campeonato Carioca 🏆✅️ Supercopa do Brasil 🏆✅️ Copa Libertadores 🏆✅️ Campeonato Brasileiro 🏆✅️ Derby das Américas 🏆✅️ Copa Challenger Embora o Derby das Américas e a Copa Challenger sejam troféus recém criados, a FIFA considera as conquistas como oficiais.13 de dez. de 2025
+        </p>
+        <img src="assets/imagem-adicional-pg2.jpg" class="imagem-titulos" alt="Títulos do Flamengo">
+    </header>
+
 </body>
 </html>
