ajeitei o nome do jogador

--- a/terceiro-arquivo.html
+++ b/terceiro-arquivo.html
@@ -22,7 +22,7 @@
     <label for="escolha">Vá Direto para o jogador que deseja: </label>
     <select id="escolha" onchange="location = this.value;">
         <option value="#">Selecione um craque...</option>
-        <option value="#arrascaeta">De Arrascaeta</option>
+        <option value="#arrascaeta">Arrascaeta</option>
         <option value="#pedro">Pedro</option>
         <option value="#bruno-henrique">Bruno Henrique</option>
         <option value="#Lucas Paqueta">Lucas Paqueta</option>
@@ -34,7 +34,7 @@
     <div class="cartao-jogador" id="arrascaeta">
         <img src="assets/arrascaeta.png" alt="Foto do Arrascaeta">
         <div class="info-jogador">
-            <h2>De Arrascaeta</h2>
+            <h2>Arrascaeta</h2>
             <p><strong>Posição:</strong> Meio-campo</p>
             <p><strong>Camisa:</strong> 14</p>
             <p><strong>Sobre:</strong> <br>Foram 25 gols no ano, sua maior marca em uma única temporada pelo Flamengo. O desempenho incluiu quatro gols em Mundiais de Clubes, número que o colocou ao lado de Pedro como maior artilheiro rubro-negro na história da competição. Além da produção ofensiva, Arrascaeta também se destacou pelo desempenho físico.12 de jan. de 2026</p>
